# thumbnail_generator

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  app.py  lamnda.yaml  pyproject.toml  run.py  samconfig.toml  sample_call_curl.json  template.yaml
cloudformation/: log.md  sample_call.json  template.yaml
tests/: test_app.py
thumbnail/: main.py
thumbnail/api/health/: router.py
thumbnail/api/ops/: router.py
thumbnail/api/secure/: router.py
