[tool.poetry]
name = "thumbnail-generator"
version = "0.1.0"
description = ""
authors = ["Luis Ramirez <luisramirezcolin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
