[tool.poetry]
name = "thumbnail-generator"
version = "0.1.0"
description = ""
authors = ["Luis Ramirez <luisramirezcolin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
mangum = "^0.19.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
aioboto3 = "^13.2.0"
ruff = "^0.6.9"
python-multipart = "^0.0.12"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
